--- a/example/src/App.css
+++ b/example/src/App.css
@@ -7,6 +7,7 @@
 }
 
 .sidebar {
+  display: flex;
   padding: 10px;
   user-select: none;
   grid-area: sidebar;
@@ -15,6 +16,7 @@
 }
 
 .primary-view {
+  display: flex;
   padding: 10px;
   user-select: none;
   grid-area: primary-view;
@@ -23,6 +25,7 @@
 }
 
 .secondary-view {
+  display: flex;
   padding: 10px;
   user-select: none;
   grid-area: secondary-view;
