Use mouse event

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,9 @@
   position: absolute;
   height: 100%;
   z-index: 1000;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
   user-select: none;
   cursor: col-resize;
 }
